- Added the missing projects - Fixed logo over links on mobile - Changed favicon - Added image for the missing projects

--- a/_sass/pages/page.sass
+++ b/_sass/pages/page.sass
@@ -1,5 +1,7 @@
 .page
-    margin-top: 30px
+    margin-top: 60px
+    @media (min-width: 700px)
+        margin-top: 30px
 
     > h1
         text-align: center
